--- a/style.css
+++ b/style.css
@@ -319,8 +319,9 @@ button:hover,
 
     .comment-rating {
         flex-direction: row;
-        width:100px;
+        width:110px;
         height:40px;
+        font-size: 1rem;
     }
 
     .comment-body {
