--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 
 main {
     margin: auto;
-    width: fit-content;
 }
 
 .comments-container,
@@ -294,7 +293,8 @@ button:hover,
     }
     
     main {
-        width:90%;
+        padding:5%;
+        /* width:90%; */
         margin: auto;
     }
 
